last minute fixxes for some spacing things at the end of the press section

--- a/css/style.css
+++ b/css/style.css
@@ -677,7 +677,7 @@ footer {
    ========================================================================== */
 #spotify-player {
   position: fixed;
-  bottom: 80px;
+  bottom: 4.5rem;
   right: 0;
   z-index: 9000;
   max-width: 100vw;
